<resources>
    <string name="app_name">WARNU</string>

    <!-- Seller -->
    <string name="tambah_produk">Tambah Produk</string>
    <string name="product_name">Kaos</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="logo_warnu">Logo WarNu</string>
    <string name="warnu">WarNU</string>
    <string name="memproses_pembayaran">Memproses pembayaran...</string>
    <string name="tidak_ada_produk_tersedia">Tidak ada produk tersedia</string>
    <string name="search">Search</string>
    <string name="cari_produk">Cari produk...</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="harga">Harga</string>
    <string name="stok">Stok</string>
    <string name="kategori">Kategori</string>
    <string name="category_preview">Category Preview</string>
    <string name="pilih_gambar">Pilih gambar</string>
    <string name="simpan_produk">Simpan produk</string>
    <string name="belum_ada_pesanan">Belum Ada Pesanan</string>
    <string name="receipt">Receipt</string>
    <string name="semua_pesanan_anda_akan_muncul_di_sini">Semua pesanan Anda akan muncul di sini.</string>
    <string name="aksi_buyer">Aksi Buyer</string>
    <string name="logo">Logo</string>
    <string name="login_to_your">Login to your</string>
    <string name="account">Account</string>
    <string name="enter_your_email_and_password_to_log_in">Enter your email and password to log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_as_buyer">Sign Up as Buyer</string>
    <string name="I">|</string>
    <string name="sign_up_as_seller">Sign Up as Seller</string>
    <string name="no_products_available">No Resource Available!</string>
    <string name="add_product">Add Product</string>
    <string name="no_orders_yet">No Order Yet!</string>
    <string name="description">Description</string>
</resources>
